@@ -1398,16 +1398,8 @@ name|File
 name|file
 parameter_list|)
 block|{
-name|String
-name|path
-init|=
-name|file
-operator|.
-name|getAbsolutePath
-argument_list|()
-decl_stmt|;
 name|Preferences
-name|frefLastProjFiles
+name|prefLastProjFiles
 init|=
 name|ModelerPreferences
 operator|.
@@ -1416,7 +1408,7 @@ argument_list|()
 decl_stmt|;
 name|List
 argument_list|<
-name|String
+name|File
 argument_list|>
 name|arr
 init|=
@@ -1433,7 +1425,7 @@ name|arr
 operator|.
 name|contains
 argument_list|(
-name|path
+name|file
 argument_list|)
 condition|)
 block|{
@@ -1441,7 +1433,7 @@ name|arr
 operator|.
 name|remove
 argument_list|(
-name|path
+name|file
 argument_list|)
 expr_stmt|;
 block|}
@@ -1451,7 +1443,7 @@ name|add
 argument_list|(
 literal|0
 argument_list|,
-name|path
+name|file
 argument_list|)
 expr_stmt|;
 while|while
@@ -1481,7 +1473,7 @@ expr_stmt|;
 block|}
 try|try
 block|{
-name|frefLastProjFiles
+name|prefLastProjFiles
 operator|.
 name|clear
 argument_list|()
@@ -1518,7 +1510,7 @@ name|i
 operator|++
 control|)
 block|{
-name|frefLastProjFiles
+name|prefLastProjFiles
 operator|.
 name|put
 argument_list|(
@@ -1535,6 +1527,9 @@ name|get
 argument_list|(
 name|i
 argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -1698,7 +1693,7 @@ argument_list|()
 decl_stmt|;
 name|List
 argument_list|<
-name|String
+name|File
 argument_list|>
 name|arr
 init|=
@@ -1708,66 +1703,27 @@ name|getLastProjFiles
 argument_list|()
 decl_stmt|;
 comment|// Add proj path to the preferences
-comment|// Prevent duplicate entries.
-name|String
-name|oldPath
-init|=
+name|arr
+operator|.
+name|remove
+argument_list|(
 name|oldFile
+argument_list|)
+expr_stmt|;
+name|arr
 operator|.
-name|getAbsolutePath
-argument_list|()
-decl_stmt|;
-name|String
-name|newPath
-init|=
+name|remove
+argument_list|(
 name|newFile
-operator|.
-name|getAbsolutePath
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|arr
-operator|.
-name|contains
-argument_list|(
-name|oldPath
-argument_list|)
-condition|)
-block|{
-name|arr
-operator|.
-name|remove
-argument_list|(
-name|oldPath
 argument_list|)
 expr_stmt|;
-block|}
-if|if
-condition|(
-name|arr
-operator|.
-name|contains
-argument_list|(
-name|newPath
-argument_list|)
-condition|)
-block|{
-name|arr
-operator|.
-name|remove
-argument_list|(
-name|newPath
-argument_list|)
-expr_stmt|;
-block|}
 name|arr
 operator|.
 name|add
 argument_list|(
 literal|0
 argument_list|,
-name|newPath
+name|newFile
 argument_list|)
 expr_stmt|;
 while|while
@@ -1851,6 +1807,9 @@ name|get
 argument_list|(
 name|i
 argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -1859,11 +1818,7 @@ argument_list|()
 operator|.
 name|setDirectory
 argument_list|(
-operator|new
-name|File
-argument_list|(
-name|newPath
-argument_list|)
+name|newFile
 argument_list|)
 expr_stmt|;
 name|frame
