@@ -89,9 +89,9 @@ begin_import
 import|import
 name|java
 operator|.
-name|util
+name|io
 operator|.
-name|ArrayList
+name|File
 import|;
 end_import
 
@@ -101,7 +101,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|Collections
+name|ArrayList
 import|;
 end_import
 
@@ -324,7 +324,7 @@ specifier|public
 specifier|static
 name|List
 argument_list|<
-name|String
+name|File
 argument_list|>
 name|getLastProjFiles
 parameter_list|()
@@ -335,22 +335,9 @@ init|=
 name|getLastProjFilesPref
 argument_list|()
 decl_stmt|;
-name|ArrayList
-argument_list|<
-name|String
-argument_list|>
-name|arrayLastProjFiles
-init|=
-operator|new
-name|ArrayList
-argument_list|<>
-argument_list|()
-decl_stmt|;
 name|String
 index|[]
 name|keys
-init|=
-literal|null
 decl_stmt|;
 try|try
 block|{
@@ -377,14 +364,13 @@ argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
+return|return
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+return|;
 block|}
-if|if
-condition|(
-name|keys
-operator|!=
-literal|null
-condition|)
-block|{
 name|int
 name|len
 init|=
@@ -392,16 +378,18 @@ name|keys
 operator|.
 name|length
 decl_stmt|;
-name|ArrayList
+name|List
 argument_list|<
-name|Integer
+name|File
 argument_list|>
-name|keysInteger
+name|lastProjectsFiles
 init|=
 operator|new
 name|ArrayList
 argument_list|<>
-argument_list|()
+argument_list|(
+name|len
+argument_list|)
 decl_stmt|;
 for|for
 control|(
@@ -418,62 +406,64 @@ name|i
 operator|++
 control|)
 block|{
-name|keysInteger
-operator|.
-name|add
-argument_list|(
-name|i
-argument_list|)
-expr_stmt|;
-block|}
-name|Collections
-operator|.
-name|sort
-argument_list|(
-name|keysInteger
-argument_list|)
-expr_stmt|;
-for|for
-control|(
-name|int
-name|i
+name|String
+name|fileName
 init|=
-literal|0
-init|;
-name|i
-operator|<
-name|len
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|arrayLastProjFiles
-operator|.
-name|add
-argument_list|(
 name|filesPrefs
 operator|.
 name|get
 argument_list|(
-name|keysInteger
+name|Integer
 operator|.
-name|get
+name|toString
 argument_list|(
 name|i
 argument_list|)
-operator|.
-name|toString
-argument_list|()
 argument_list|,
 literal|""
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|fileName
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|File
+name|file
+init|=
+operator|new
+name|File
+argument_list|(
+name|fileName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|lastProjectsFiles
+operator|.
+name|contains
+argument_list|(
+name|file
+argument_list|)
+condition|)
+block|{
+name|lastProjectsFiles
+operator|.
+name|add
+argument_list|(
+name|file
 argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
 return|return
-name|arrayLastProjFiles
+name|lastProjectsFiles
 return|;
 block|}
 specifier|public
