@@ -736,19 +736,10 @@ specifier|public
 name|void
 name|onFileSelect
 parameter_list|(
-name|String
-name|fileName
-parameter_list|)
-block|{
 name|File
 name|file
-init|=
-operator|new
-name|File
-argument_list|(
-name|fileName
-argument_list|)
-decl_stmt|;
+parameter_list|)
+block|{
 name|ActionEvent
 name|event
 init|=
@@ -887,7 +878,7 @@ parameter_list|()
 block|{
 name|List
 argument_list|<
-name|String
+name|File
 argument_list|>
 name|arr
 init|=
