@@ -31,6 +31,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|List
@@ -199,7 +209,7 @@ parameter_list|()
 block|{
 name|List
 argument_list|<
-name|String
+name|File
 argument_list|>
 name|arr
 init|=
@@ -274,15 +284,15 @@ block|{
 name|String
 name|name
 init|=
-operator|(
-name|String
-operator|)
 name|arr
 operator|.
 name|get
 argument_list|(
 name|i
 argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
 decl_stmt|;
 if|if
 condition|(
